feat-select-from-multi-gif WIP gif preview post; unfortunately the idea is not realizable at the moment due to restrictions/implementation of ephemeral messages and probably a different approach is necessary

--- a/plugin.yaml
+++ b/plugin.yaml
@@ -1,7 +1,7 @@
-id: com.github.kippsterr.mattermost.plugin.giphy
-name: Giphy
+id: com.github.kippsterr.mattermost.plugin.giphy-multi
+name: Multi Giphy
 description: Add Giphy features to Mattermost
-version: '0.2.1'
+version: '0.2.7'
 backend:
     executable: plugin.exe
 settings_schema:
