feat-response-template fix test by adding a default reponse template to the code if it comes in empty from the config

--- a/plugin.yaml
+++ b/plugin.yaml
@@ -23,7 +23,7 @@ settings_schema:
               * ##KEYWORDS##
               * ##GIR_URL##
               * ##VIA_GIPHY##
-          default: " *[##KEYWORDS##](##GIF_URL##)*\n![GIF for '##KEYWORDS##'](##GIF_URL##)"
+          default: "*##KEYWORDS##* ##VIA_GIPHY## - ##GIF_URL##"
         - key: Rendition
           type: dropdown
           display_name: Rendition style
